# ground

./: .gitignore  CLAUDE.md  COUNTDOWN.md  Claude Code Web on Mobile (remote) Research.md  DECISION.md  GRAUNDED_TYPES.md  GRAUNDE_CONTROL.md  HOOKS.md  Makefile  QNTX_ATTESTATIONS.md  README.md  deleteme.txt  deleteme2.txt  deleteme3.txt  dub.json  flake.nix  reference.md
.github/workflows/: ci.yml
controls/: controls.d  controls.pbt  controls.textproto  macos.d  macos.pbt  qntx.d  qntx.pbt  qntx.textproto
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
source/: adaptive.d  adaptive_test.d  attest.d  ax.d  binary.d  control_handlers.d  control_handlers_test.d  controls.d  count.d  db.d  decay.d  deferred.d  env_test.d  errors.d  exec.d  exec_test.d  git.d  hooks.d  http.d  immediate.d  loom.d  main.d  matcher.d  matcher_test.d  parse.d  permission.d  permission_test.d  permissionrequest.d  posttooluse.d  posttooluse_test.d  posttoolusefailure.d  precompact.d  pretooluse.d  profile.d  project_test.d  proto.d  proto_exec_test.d  proto_test.d  push.d  push_test.d  (+10 more)
tools/: filelist.d  filelist_test.d  wind.d
tower/: PLAN.md  build.ts
tower/src/: main.ts
tower/src-tauri/: Cargo.toml
tower/src-tauri/src/: main.rs
ui/: build.ts  index.html  package.json  tsconfig.json
ui/src/: App.svelte  ControlRow.svelte  ScopeGroup.svelte  graunde.css  main.ts  parse.ts
ui/src-tauri/: tauri.conf.json
ui/src-tauri/src/: main.rs
